gcc/testsuite/rust/rustc/ui/error-codes/E0432.rs
use something::Foo; // { dg-error ".E0432." "" { target *-*-* } }

fn main () {
}

